src/assets/scss/components/_portfolio-item.scss
.portfolio-item {
    position: relative;
    display: flex;
    flex-flow: nowrap column;

    &__content {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: stretch;
        flex-wrap: nowrap;
        height: 100%;
    }

    &__slider {
        display: block;
        flex: 1 0 0;
        position: relative;
    }

    &__image {
        display: block;
        height: 100%;
        max-height: none !important;
        background-position: center center;
        background-size: contain;
        background-repeat: no-repeat;

        overflow: hidden;
    }

    .orbit-container {
        height: auto !important;
    }
}

